data/w3c-emails/lists-099-3414077.txt
docno="lists-099-3414077"
received="Sat Jan 18 13:23:12 2003"
isoreceived="20030118182312"
sent="Sat, 18 Jan 2003 13:22:48 -0500"
isosent="20030118182248"
name="Dan Brickley"
email="danbri@w3.org"
subject="Re: re http://www.w3.org/2001/sw/Europe/200301/x2r/ht/a1/00README.html"
id="20030118182248.GI19773@tux.w3.org"
charset="us-ascii"
inreplyto="f5bof6e5q6d.fsf&#64;erasmus.inf.ed.ac.uk"
expires="-1"

To:"Henry S. Thompson"<ht@cogsci.ed.ac.uk>
Cc:www-archive@w3.org,mf@w3.org



Thanks, I'm re-doing with alt.

btw is this normal stderr?:

[[
xsv -r alt po.xml po.xsd | cat infoset-r.dtd - > po-psvi.xml
<?xml version='1.0'?>
<xsv xmlns='http://www.w3.org/2000/05/xsv' docElt="{None}purchaseOrder"
     instanceAssessed="true" instanceErrors="0"
     rootType="{None}:PurchaseOrderType" schemaDocs="po.xsd" schemaErrors="0"
  target="/home/danbri/servers/cvs/w3.org/WWW/2001/sw/Europe/200301/x2r/ht/a1/po.xml"
     validation="strict" version="XSV 2.2-2 of 2002/12/03 10:45:21">
  <schemaDocAttempt
    URI="/home/danbri/servers/cvs/w3.org/WWW/2001/sw/Europe/200301/x2r/ht/a1/po.xsd"
                    outcome="success" source="command line"/>
  <schemaDocAttempt URI="http://www.cogsci.ed.ac.uk/~kari/schema-mapping"
                    namespace="http://www.cogsci.ed.ac.uk/~kari/schema-mapping"
                    outcome="failure" source="new namespace">
    <notASchema filename="http://www.cogsci.ed.ac.uk/~kari/schema-mapping">Not recognised
as W3C XML Schema or RDDL: foo</notASchema>
  </schemaDocAttempt>
</xsv>
]]

...the second schemaDocAttempt is puzzling.

Moving on anyways...  it appears the XSV output isn't valid xml (according to xsltproc):

xsltproc   infoset-r.xsl  po-psvi.xml > po-mapped.xml
po-psvi.xml:10196: validity error: ID xsd..type.NMTOKEN already defined
            <p:simpleTypeDefinition id="xsd..type.NMTOKEN">
                                                          ^
po-psvi.xml:12411: validity error: ID xsd..type.language already defined
                    <p:simpleTypeDefinition id="xsd..type.language">

If I fix that by hand (by renaming the 2nd two recurrences), I can get po-mapped.xml

From there, two more hiccups. The first may be a matter of dispute with xsltproc, the 2nd
seems to be a missing file:

xsltproc  logicOut.xsl  po-mapped.xml > po-fopl.xml
po-mapped.xml:2: error: Empty namespace name for prefix ns2
urs="" map:maxOccurs="" map:type-to="individual" map:type-name="{}PurchaseOrder
                                                                              ^
warning: failed to load external entity "standardBuiltins.xml"


This is referenced in logicOut.xsl:
  <xsl:variable name="standardBuiltins" select="document('standardBuiltins.xml')/map:pings"/>


Anyhow we get some output, fopl and java files.

Trying the fopl htmlizer, however, I only get message in the html complaining
required parameter missing: group [yes|no]; presumably something which went wrong earlier 
has screwed things up?

On the brightside, po-fopl.xml is very nice. I can see how this maps to RDF quite easily.
The only change I'd seek, at first glance, is for the relation name to be 
URI-based. 

Where you have:

  <fopl:relation name="street">
    <fopl:pointer ref="id2589284"/>
    <fopl:atom type="string">123 Maple Street</fopl:atom>
  </fopl:relation>

we need something like 

  <fopl:relation name="http://example.com/some-ns/#street">
    <fopl:pointer ref="id2589284"/>
    <fopl:atom type="string">123 Maple Street</fopl:atom>
  </fopl:relation>


Presuambly the mapping vocab could carry such info?

Dan 

ps. copying Max as I'm going to be asking him for XSLT help with this soon!

Dan



